[tool.poetry]
name = "stock-analysis-jupyter"
version = "0.1.0"
description = ""
authors = ["FScoward <endlick@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_analysis_jupyter"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
